// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`dev 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mas 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`mas 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mas and 7z 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.7z",
      "safeArtifactName": "TestApp-1.1.0-mac.7z",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`mas and 7z 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;
